--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   # Local storage
   sqflite: ^2.3.0
   path_provider: ^2.1.1
+  path: ^1.8.3
   
   # Rasm cache
   cached_network_image: ^3.3.0
